force-app/main/default/objects/RigaOrdine__c/RigaOrdine__c.object-meta.xml
<CustomObject>
    <label>RigaOrdine</label>
    <nameField>
        <displayFormat>RO-{000}</displayFormat>
        <label>Numero RigaOrdine</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RigheOrdine</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>