force-app/main/default/objects/RigaOrdine__c/fields/Ordine__c.field-meta.xml
<CustomField>
    <fullName>Ordine__c</fullName>
    <label>Ordine</label>
    <referenceTo>Ordine__c</referenceTo>
    <relationshipLabel>RigheOrdine</relationshipLabel>
    <relationshipName>RigheOrdine</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>