force-app/main/default/objects/RigaOrdine__c/fields/PrezzoUnitario__c.field-meta.xml
<CustomField>
    <fullName>PrezzoUnitario__c</fullName>
    <label>PrezzoUnitario</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>