force-app/main/default/objects/RigaOrdine__c/fields/Prodotto__c.field-meta.xml
<CustomField>
    <fullName>Prodotto__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prodotto</label>
    <referenceTo>Prodotto__c</referenceTo>
    <relationshipLabel>RigheOrdine</relationshipLabel>
    <relationshipName>RigheOrdine</relationshipName>
    <type>Lookup</type>
</CustomField>