force-app/main/default/objects/RigaOrdine__c/fields/Quantita__c.field-meta.xml
<CustomField>
    <fullName>Quantita__c</fullName>
    <label>Quantita</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>