force-app/main/default/objects/RigaOrdine__c/fields/Subtotale__c.field-meta.xml
<CustomField>
    <fullName>Subtotale__c</fullName>
    <formula>Quantita__c  *  PrezzoUnitario__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subtotale</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>